--- a/package.json
+++ b/package.json
@@ -3,12 +3,33 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "http-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run build",
+    "build": "webpack build -c webpack.config.ts --mode production",
+    "serve": "webpack serve -c webpack.config.ts --mode development",
+    "watch": "webpack watch -c webpack.config.ts --mode development"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "http-server": "^13.0.1"
+    "@types/createjs": "0.0.29",
+    "@types/node": "^16.9.1",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-dev-server": "^4.1.0",
+    "css-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "install": "^0.13.0",
+    "npm": "^7.23.0",
+    "style-loader": "^3.2.1",
+    "ts-loader": "^9.2.5",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3",
+    "webpack": "^5.52.1",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.2.0",
+    "worker-loader": "^3.0.8"
+  },
+  "dependencies": {
+    "@types/yandex-maps": "^2.1.19",
+    "rollup-plugin-web-worker-loader": "^1.6.1"
   }
 }
